# htc_baseline

./: .gitignore  AGENTS.md  pyproject.toml
docs/: experiment_log.md  experiment_results_summary.md  strict_hydra_scibert_audit.md  strict_hydra_scibert_protocol.md
docs/hydra_scibert_reproduction_package/: README.md  file_manifest.txt  report.md
docs/hydra_scibert_reproduction_package/data/: run_artifact_manifest.json  strict_hydra_scibert_runs.csv  strict_hydra_scibert_summary.json
docs/hydra_scibert_reproduction_package/data/run_artifacts/hydra_local_global_seed1_20260627_221615/: best_val_metrics.json  config.json  test_metrics.json  training_history.json
docs/hydra_scibert_reproduction_package/data/run_artifacts/hydra_local_global_seed2_20260627_231441/: best_val_metrics.json  config.json  test_metrics.json  training_history.json
docs/hydra_scibert_reproduction_package/data/run_artifacts/hydra_local_seed1_20260627_165920/: config.json  (+3 more)
docs/hydra_scibert_reproduction_package/reference/: method_baseline_comparison.md  strict_hydra_scibert_protocol.md  strict_hydra_scibert_results.md
docs/hydra_scibert_reproduction_package/scripts/: check_strict_hydra_status.sh  ensure_strict_hydra_complete.sh
results/hydra_local_seed42_20260626_153400/: config.json
scripts/: audit_strict_hydra_results.py  finalize_strict_hydra_when_done.sh  run_all_experiments.sh  run_hydra_wos.sh  run_strict_hydra_scibert.sh  setup_server.sh  summarize_results.py  summarize_strict_results.py  train_hydra.py
src/data/: wos_dataset.py
src/models/: hydra.py
src/utils/: metrics.py
(+49 files in other folders)
